--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -37,18 +37,40 @@
 
 <div class="container-fluid">
     {% if grade > 80 %}
-    <div class="alert alert-success">
+    <div class="alert alert-success bg-success">
        <!--HINT Display passed info -->
+       <p><b>Congratulations {{ user.first_name }}! </b>You have passed the exam and completed the course with score {{grade}} / 100</p>
     </div>
         {% else %}
-        <div class="alert alert-danger">
+        <div class="alert alert-danger bg-danger">
             <!--HINT Display failed info -->
+            <p><b> Failed! </b>Sorry, {{ user.first_name }}! You have failed the exam with score {{grade}} / 100</p>
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header">
+                    <h5>{{ question.question_text}}</h5>
+                </div>
+                <div class="card-body">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.is_correct and choice in selected_ids %}
+                            <p class="card-text text-success">Correct answer: {{choice.choice_text}}</p>
+                        {% elif choice.is_correct is False and choice in selected_ids %}
+                            <p class="card-text text-danger">Wrong answer: {{choice.choice_text}}</p>
+                        {% elif choice.is_correct and choice not in selected_ids %}
+                            <p class="card-text text-warning">Not Selected: {{choice.choice_text}}</p>
+                        {% else %}
+                            <p class="card-text">{{choice.choice_text}}</p>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
         </div>
     </div>
 </body>
